--- a/app/webroot/css/styles.css
+++ b/app/webroot/css/styles.css
@@ -7,11 +7,6 @@ h1,h2,h3,h4,h5,h6
 	font-family: sans-serif;
 	color: #222;
 }
-body
-{
-	margin: 0;
-	padding: 20px;
-}
 section, nav, article, aside, hgroup, header, footer, figure, figcaption { display: block; }
 table
 {
@@ -44,9 +39,13 @@ header {
  * ====================
  */
 #content-wrapper {
-	margin: 40px 0 60px;
+	margin: 60px 0;
 }
-
+@media (max-width: 979px) {
+	#content-wrapper {
+		margin: 20px 0;
+	}
+}
 
 /*
  * ====================
@@ -54,7 +53,4 @@ header {
  * ====================
  */
 footer {
-}
-footer p {
-	
 }
